# finance-data-platform

./: .dockerignore  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
assets/: report_styles.css
config/: report_fields.yaml
config/universes/: semiconductor_supply_chain.yaml
docs/: DESIGN.md  architecture.md  strategy_examples.md
examples/: sample_report.html  sample_strategy_report.html
infra/aws/: README.md  bucket_policy.json  cloudfront_oac_notes.md  iam_policy.json
orchestration/dags/: finance_pipeline_dag.py
project_docs/: INITIAL_PACKET_OUTLINE.md  PROJECT_BRIEF.md  PortfolioProjectPlan_Phase1-2.md  finance-data-platform_PROJECT_INIT.md
src/finance_data_platform/: __init__.py  universe_presets.py
src/finance_data_platform/analysis/: __init__.py  portfolio.py  run_analyze.py
src/finance_data_platform/ingestion/: __init__.py  run_ingest.py  schemas.py  yfinance_connector.py
src/finance_data_platform/publishing/: __init__.py  run_publish.py  s3_publisher.py
src/finance_data_platform/reporting/: __init__.py  generator.py  run_report.py  run_strategy_report.py  strategy_report.py
src/finance_data_platform/storage/: __init__.py  parquet_store.py
src/finance_data_platform/transforms/: __init__.py  enrichment.py  (+2 more)
tests/: conftest.py  test_analysis.py  test_ingestion.py  test_orchestration.py  test_pipeline_integration.py  test_publishing.py  test_reporting.py  test_strategy_report.py  test_transforms.py
tests/fixtures/: strategy_fixture.yaml
(+2 files in other folders)
